--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
 </head>
 <body>
-  <img class="top" src="/images/bg-pattern-top.svg" alt="">
-  <img class="bottom" src="/images/bg-pattern-bottom.svg" alt="">
+  <img class="top" src="./images/bg-pattern-top.svg" alt="">
+  <img class="bottom" src="./images/bg-pattern-bottom.svg" alt="">
   
   <div class="card">
   <div class="imageone">
-    <img src="/images/bg-pattern-card.svg" alt="">
+    <img src="./images/bg-pattern-card.svg" alt="">
   </div> 
   <div class="profile">
-  <img src="/images/image-victor.jpg" alt="">
+  <img src="./images/image-victor.jpg" alt="">
   <h1>Victor Crest
  <span> 26</span></h1>
 
